homekit reset button, include and exclude options, improvements

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -93,6 +93,7 @@
     "complex": "cpp",
     "netfwd": "cpp",
     "fstream": "cpp",
-    "future": "cpp"
+    "future": "cpp",
+    "esp_hap_database.h": "c"
   }
 }
