--- a/test.yaml
+++ b/test.yaml
@@ -2,17 +2,7 @@
 esphome:
     name: custom_components_test
     platformio_options:
-      # board_build.f_flash: 40000000L
       board_build.flash_mode: dio
-      # board_build.mcu: esp32c3
-      # board_build.variant: esp32c3  
-      # board_build.f_cpu: 160000000L
-      # board_build.flash_size: 4MB
-    # build_path: .build/custom_components_test
-    # platformio_options:
-    #   board_build.partitions: "../../../partitions.csv"
-    # libraries:
-    #   - https://github.com/rednblkx/libsodium-esphome
 
 wifi:
   ssid: !secret wifi_ssid
@@ -90,10 +80,6 @@ switch:
       - light.turn_on: test_light
     turn_off_action:
       - light.turn_off: test_light
-# ota:
-
-# mdns:
-  # disabled: True
 
 external_components:
   - source:
@@ -108,29 +94,24 @@ esp32:
     version: latest
     platform_version: 6.5.0
     components:
-      # - name: esp32-tlv8
-      #   source: github://rednblkx/esp32-tlv8
-      # - name: esp32-utils
-      #   source: github://rednblkx/esp32-utils
-    # Custom sdkconfig options
     sdkconfig_options:
       CONFIG_COMPILER_OPTIMIZATION_SIZE: y
-      CONFIG_ESP32_DEFAULT_CPU_FREQ_160: "y"
-      CONFIG_ESP32_DEFAULT_CPU_FREQ_MHZ: "160"
-      # CONFIG_ESPTOOLPY_FLASHSIZE_4MB: y
-      # CONFIG_ESPTOOLPY_FLASHSIZE: 4MB
-      # CONFIG_MBEDTLS_HKDF_C: y
       CONFIG_LWIP_MAX_SOCKETS: "16"
-      # CONFIG_APP_WIFI_PROV_TRANSPORT_SOFTAP: y
-      # CONFIG_ESP32_REV_MIN_3: y
-      # CONFIG_STACK_CHECK: y
+
+button:
+  - platform: homekit
+    factory_reset:
+      name: "Reset Homekit pairings"
 
 homekit:
-  exclude:
-    # - light: ["desk_light", "test_light"]
-      lock: ["this_lock"]
-      # sensor: ["my_sensor"]
-      # switch: ["some_switch"]
+  expose_all: False
+  include:
+    light: ["desk_light", "test_light"]
+  # exclude:
+  #   light: ["desk_light", "test_light"]
+  #   lock: ["this_lock"]
+  #   sensor: ["my_sensor"]
+  #   switch: ["some_switch"]
 logger:
   hardware_uart: UART0
   level: INFO
