--- a/homekey-test-esp32.yaml
+++ b/homekey-test-esp32.yaml
@@ -54,6 +54,7 @@ homekit:
       on_hk_fail:
         lambda: |-
           ESP_LOGI("GSDGSGS", "IT FAILED :(");
+      hk_hw_finish: "SILVER"
 
 logger:
   level: DEBUG
