rename folder so components can be git imported

--- a/homekey-test-esp32.yaml
+++ b/homekey-test-esp32.yaml
@@ -16,9 +16,7 @@ lock:
     - logger.log: "Door Unlocked!"
 
 external_components:
-  - source:
-      type: local
-      path: custom_components
+  source: github://rednblkx/HAP-ESPHome@main
 
 spi:
   clk_pin: 18
