feat: entities now inherit a common HAPEntity
a first attempt to a more cohesive entity implementation

--- a/homekey-test-c3.yaml
+++ b/homekey-test-c3.yaml
@@ -35,8 +35,8 @@ esp32:
   flash_size: 4MB
   framework:
     type: esp-idf
-    version: 5.3.1
-    platform_version: 6.8.1
+    version: '5.5.0'
+    platform_version: '55.03.30-2'
     sdkconfig_options:
       CONFIG_COMPILER_OPTIMIZATION_SIZE: y
       CONFIG_LWIP_MAX_SOCKETS: "16"
