--- a/lights-c3.yaml
+++ b/lights-c3.yaml
@@ -36,7 +36,7 @@ homekit:
   light:
     - id: test_light
       meta:
-        manufacturer: "FRIENDS&CO"
+        manufacturer: "AMICI&CO"
         model: "IGNIS"
         serial_number: "42424242"
         fw_rev: "0.16.2"
@@ -61,3 +61,4 @@ light:
 
 logger:
   level: DEBUG
+  hardware_uart: USB_SERIAL_JTAG
