--- a/homekey-test-esp32.yaml
+++ b/homekey-test-esp32.yaml
@@ -15,8 +15,16 @@ lock:
     on_unlock:
     - logger.log: "Door Unlocked!"
 
+api:
+  encryption:
+    key: !secret api_key
+
+ota:
+  - platform: esphome
+    password: !secret ota_password
+
 external_components:
-  source: github://rednblkx/HAP-ESPHome@main
+  source: components
 
 spi:
   clk_pin: 18
@@ -42,14 +50,14 @@ homekit:
     - id: this_lock
       nfc_id: nfc_spi_module
       on_hk_success:
-        lambda: |-
-          ESP_LOGI("HEREHERE", "IssuerID: %s", x.c_str());
-          ESP_LOGI("HEREHERE", "EndpointID: %s", y.c_str());
-          if (id(this_lock).state == LOCK_STATE_LOCKED) {
-              id(this_lock).unlock();
-          } else {
-              id(this_lock).lock();
-          }
+        then:
+          if:
+            condition:
+              lock.is_locked: this_lock
+            then:
+              lock.unlock: this_lock
+            else:
+              lock.lock: this_lock
       on_hk_fail:
         lambda: |-
           ESP_LOGI("GSDGSGS", "IT FAILED :(");
